--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "php": ">=5.6.4",
     "laravel/lumen-framework": "5.5.*",
     "vlucas/phpdotenv": "~2.2",
-    "dusterio/lumen-passport": "^0.2.4"
+    "dusterio/lumen-passport": "^0.2.4",
+    "barryvdh/laravel-cors": "^0.10.0"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
